add event when closing window and you can now kinda play

--- a/client/src/vues/allumettes/AllumettesVue.fxml
+++ b/client/src/vues/allumettes/AllumettesVue.fxml
@@ -28,7 +28,7 @@
                           <Font size="18.0" />
                       </font>
                   </Label>
-                  <Button fx:id="btn_quitter" mnemonicParsing="false" text="Quitter">
+                  <Button fx:id="btn_quitter" mnemonicParsing="false" onAction="#quitter" text="Quitter">
                       <GridPane.margin>
                       <Insets left="4.0" />
                       </GridPane.margin>
@@ -38,7 +38,7 @@
                   <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <Button fx:id="btn_jouer" mnemonicParsing="false" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+            <Button fx:id="btn_jouer" mnemonicParsing="false" onAction="#jouer" text="Jouer" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
                </GridPane.margin>
