--- a/client/src/vues/allumettes/AllumettesVue.fxml
+++ b/client/src/vues/allumettes/AllumettesVue.fxml
@@ -6,8 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
 <Scene xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.allumettes.AllumettesControleur">
@@ -28,7 +28,7 @@
                           <Font size="18.0" />
                       </font>
                   </Label>
-                  <Button fx:id="btn_quitter" mnemonicParsing="false" onAction="#quitter" text="Quitter">
+                  <Button fx:id="btn_quitter" cancelButton="true" focusTraversable="false" mnemonicParsing="false" onAction="#quitter" text="Quitter">
                       <GridPane.margin>
                       <Insets left="4.0" />
                       </GridPane.margin>
@@ -43,7 +43,7 @@
                   <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
                </GridPane.margin>
             </Button>
-            <Pane fx:id="allumettesConteneur" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
+            <StackPane fx:id="allumettesConteneur" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
               </children>
       </GridPane>
    </root>
