--- a/client/src/vues/MainView.fxml
+++ b/client/src/vues/MainView.fxml
@@ -1,28 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.MainControleur">
-   <content>
-      <GridPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="400.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0">
+<GridPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.MainControleur">
+   <columnConstraints>
+      <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
+   </rowConstraints>
+   <children>
+      <GridPane maxHeight="1.7976931348623157E308" maxWidth="600.0" minHeight="336.0" minWidth="600.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="30.0" prefWidth="160.0" />
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="240.0" minWidth="10.0" percentWidth="70.0" prefWidth="240.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="100.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Test java FX config" GridPane.rowIndex="1" />
-            <Button fx:id="btnAllumettes" mnemonicParsing="false" onAction="#openAllumettes" text="ALLUMETTES" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Button fx:id="btnPendu" mnemonicParsing="false" onAction="#openPendu" text="PENDU" GridPane.halignment="CENTER" />
+            <Button fx:id="btnAllumettes" mnemonicParsing="false" onAction="#openAllumettes" prefWidth="100.0" text="ALLUMETTES" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Button>
+            <Button fx:id="btnPendu" mnemonicParsing="false" onAction="#openPendu" prefWidth="100.0" text="PENDU" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+            <Button fx:id="btnTicTacToe" mnemonicParsing="false" onAction="#openTicTacToe" prefWidth="100.0" text="TicTacToe" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Group fx:id="grp_joueurAllumettes1" GridPane.rowIndex="1">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1d0" height="32.0" layoutX="-71.0" layoutY="-65.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="6.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#82271e" height="14.0" layoutX="-75.0" layoutY="-78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e1e1d0" height="32.0" layoutX="-51.0" layoutY="-65.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="6.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#82271e" height="14.0" layoutX="-55.0" layoutY="-78.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="14.0" />
+               </children>
+            </Group>
+            <Group fx:id="grp_pendu">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="-11.0" layoutY="-10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="26.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="80.0" layoutY="-88.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="1.0" layoutY="-88.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="40.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="-2.0" layoutY="-80.0" rotate="135.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="22.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="10.0" layoutX="33.0" layoutY="-88.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="2.0" />
+                  <Circle fill="#ffffff00" layoutX="34.0" layoutY="-69.0" radius="10.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="30.0" layoutX="32.0" layoutY="-60.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="18.0" layoutX="29.0" layoutY="-34.0" rotate="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="18.0" layoutX="35.0" layoutY="-34.0" rotate="-20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="18.0" layoutX="28.0" layoutY="-55.0" rotate="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="18.0" layoutX="36.0" layoutY="-54.0" rotate="-20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+               </children>
+            </Group>
+            <Group fx:id="grp_pendu1" GridPane.rowIndex="2">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="-11.0" layoutY="-49.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="1.0" layoutY="-88.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Circle fill="#ffffff00" layoutX="13.0" layoutY="-79.0" radius="6.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="-11.0" layoutY="-69.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="22.0" layoutY="-88.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="4.0" />
+                  <Circle fill="#ffffff00" layoutX="33.0" layoutY="-37.0" radius="6.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="6.0" layoutY="-39.0" rotate="45.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="15.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="4.0" layoutX="6.0" layoutY="-39.0" rotate="-45.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="15.0" />
+               </children>
+            </Group>
          </children>
       </GridPane>
-   </content>
-</ScrollPane>
+      <Label text="Serveur de jeu" GridPane.halignment="CENTER">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+   </children>
+</GridPane>
