--- a/client/src/vues/tictactoe/TicTacToeVue.fxml
+++ b/client/src/vues/tictactoe/TicTacToeVue.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <Scene xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.tictactoe.TicTacToeControleur">
@@ -19,6 +22,7 @@
           <rowConstraints>
               <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
               <children>
                   <Label text="TicTacToe" GridPane.halignment="CENTER">
@@ -31,9 +35,34 @@
                       <Insets left="4.0" />
                       </GridPane.margin>
                   </Button>
+                              <Label fx:id="lbl_log" text="lbl_log" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+               </GridPane.margin>
+            </Label>
             <StackPane GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                <children>
-                  <StackPane fx:id="allumettesConteneur" />
+                  <Group>
+                     <children>
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="200.0" layoutX="61.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="8.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="200.0" layoutX="131.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="8.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutY="61.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" />
+                        <Rectangle arcHeight="5.0" arcWidth="5.0" height="8.0" layoutY="131.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="200.0" />
+                        <Pane fx:id="pane_caseConteneur" maxHeight="200.0" maxWidth="200.0" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <Group layoutX="30.0" layoutY="30.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="100.0" layoutY="30.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="170.0" layoutY="30.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="30.0" layoutY="100.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="100.0" layoutY="100.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="170.0" layoutY="100.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="30.0" layoutY="170.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="100.0" layoutY="170.0" scaleX="60.0" scaleY="60.0" />
+                              <Group layoutX="170.0" layoutY="170.0" scaleX="60.0" scaleY="60.0" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </Group>
                </children>
             </StackPane>
               </children>
