--- a/client/src/vues/pendu/PenduVue.fxml
+++ b/client/src/vues/pendu/PenduVue.fxml
@@ -77,7 +77,7 @@
                               <Insets />
                            </GridPane.margin>
                         </Group>
-                        <Button fx:id="btn_jouer" mnemonicParsing="false" onAction="#initPartie" text="btn_jouer" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="btn_jouer" mnemonicParsing="false" onAction="#initPartie" text="Lancer la partie" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <GridPane GridPane.rowIndex="1">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -92,7 +92,7 @@
                                     <Insets right="10.0" />
                                  </GridPane.margin>
                               </TextField>
-                              <Button fx:id="btn_lettre" mnemonicParsing="false" onAction="#handleLettre" text="btn_lettre" GridPane.columnIndex="1">
+                              <Button fx:id="btn_lettre" mnemonicParsing="false" onAction="#handleLettre" text="Vérifier" GridPane.columnIndex="1">
                                  <GridPane.margin>
                                     <Insets left="10.0" />
                                  </GridPane.margin>
