--- a/client/src/vues/pendu/PenduVue.fxml
+++ b/client/src/vues/pendu/PenduVue.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
 
 <Scene xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.pendu.PenduControleur">
    <root>
@@ -72,12 +73,9 @@
                       <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Group fx:id="grp_mot" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                           <GridPane.margin>
-                              <Insets />
-                           </GridPane.margin>
-                        </Group>
-                        <Button fx:id="btn_jouer" mnemonicParsing="false" onAction="#initPartie" text="Lancer la partie" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <HBox fx:id="hb_mot" alignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        </HBox>
+                        <Button fx:id="btn_jouer"  mnemonicParsing="false" onAction="#initPartie" text="Lancer la partie" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
                         <GridPane GridPane.rowIndex="1">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -99,11 +97,11 @@
                               </Button>
                            </children>
                         </GridPane>
-                        <Group fx:id="grp_err" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
+                        <HBox fx:id="hb_err" alignment="BOTTOM_CENTER" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
                            <GridPane.margin>
                               <Insets bottom="20.0" />
                            </GridPane.margin>
-                        </Group>
+                        </HBox>
                      </children>
                   </GridPane>
                </children>
