--- a/client/src/vues/pendu/PenduVue.fxml
+++ b/client/src/vues/pendu/PenduVue.fxml
@@ -8,12 +8,13 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.HBox?>
 
 <Scene xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.src.controleurs.pendu.PenduControleur">
    <root>
@@ -69,14 +70,20 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="348.0" minHeight="10.0" prefHeight="332.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="348.0" minHeight="10.0" prefHeight="326.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="348.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <HBox fx:id="hb_mot" alignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                        </HBox>
-                        <Button fx:id="btn_jouer"  mnemonicParsing="false" onAction="#initPartie" text="Lancer la partie" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <GridPane GridPane.rowIndex="1">
+                        <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <HBox fx:id="hb_mot" alignment="CENTER">
+                              </HBox>
+                              <Button fx:id="btn_jouer" mnemonicParsing="false" onAction="#initPartie" text="Lancer la partie" />
+                           </children>
+                        </VBox>
+                        <HBox fx:id="hb_err" alignment="BOTTOM_CENTER" fillHeight="false" GridPane.rowIndex="1" />
+                        <GridPane GridPane.rowIndex="2">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -97,11 +104,6 @@
                               </Button>
                            </children>
                         </GridPane>
-                        <HBox fx:id="hb_err" alignment="BOTTOM_CENTER" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM">
-                           <GridPane.margin>
-                              <Insets bottom="20.0" />
-                           </GridPane.margin>
-                        </HBox>
                      </children>
                   </GridPane>
                </children>
