--- a/client/src/vues/tictactoe/TicTacToeVue.fxml
+++ b/client/src/vues/tictactoe/TicTacToeVue.fxml
@@ -5,11 +5,14 @@
 <?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -40,7 +43,7 @@
                   <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                </GridPane.margin>
             </Label>
-            <StackPane GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
+            <StackPane fx:id="sp_mainConteneur" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
                <children>
                   <Group>
                      <children>
@@ -65,6 +68,26 @@
                   </Group>
                </children>
             </StackPane>
+            <VBox fx:id="vbox_lobbyConteneur" alignment="CENTER" GridPane.rowIndex="1">
+               <children>
+                  <ListView fx:id="lv_salonListe" prefHeight="200.0" prefWidth="200.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </ListView>
+                  <TextField fx:id="tf_entrerSalon" onAction="#onEnterEntrerSalon">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </TextField>
+               </children>
+               <padding>
+                  <Insets bottom="60.0" left="80.0" right="80.0" top="60.0" />
+               </padding>
+            </VBox>
               </children>
       </GridPane>
    </root>
