--- a/client/src/vues/tictactoe/TicTacToeVue.fxml
+++ b/client/src/vues/tictactoe/TicTacToeVue.fxml
@@ -83,6 +83,11 @@
                         <Insets top="20.0" />
                      </VBox.margin>
                   </TextField>
+                  <Button fx:id="btn_nouvSalon" mnemonicParsing="false" onAction="#nouveauSalon" text="Nouveau salon">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="60.0" left="80.0" right="80.0" top="60.0" />
